src/objects/User_To_Group__c.object
<CustomObject>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_To_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Group</label>
        <referenceTo>User_Group__c</referenceTo>
        <relationshipLabel>User To Groups</relationshipLabel>
        <relationshipName>User_To_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_To_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User To Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>User_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UG - {0000}</displayFormat>
        <label>User To Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User To Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>